--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -363,7 +363,7 @@
                 <div class="row">
                     <form class="col-md-10" action="{{ path('zectranet_task_edit_descritpion', { 'task_id': task.id }) }}" method="post">
                         <div class="form-group">
-                            <textarea class="form-control" style="border: none; height: 150px; resize: none;">{{ task.description }}</textarea>
+                            <textarea class="form-control" name="description" style="border: none; height: 150px; resize: none;">{{ task.description }}</textarea>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-default btn-primary">Save</button>
