--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -4,12 +4,6 @@
 
 {% block body %}
     <div ng-cloak>
-        <div class="page-header">
-            <h1>
-            <i class="fa fa-user"></i>
-            {{ task.name }}
-            </h1>
-        </div>
 
         <div class="row">
             <!--Begin of Main Task Info-->
@@ -22,13 +16,13 @@
                 <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-3">
                         <div class="input-group">
-                            <label class="text-muted  form-control-static">Name:</label>
+                            <label class="text-muted form-control-static">Name:</label>
                         </div>
                     </div>
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <input type="text" style="border: none;" class="form-control" value="{{ task.name }}">
+                            <input type="text" name="name" style="border: none;" class="form-control" value="{{ task.name }}">
                         </div>
 
                     </div>
@@ -63,7 +57,7 @@
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <select class="form-control" style="border: none;">
+                            <select class="form-control" name="type" style="border: none;">
                                 {% for type in task_types %}
                                     <option style="color: {{ type.color }}" value="{{ type.id }}"
                                             {% if type.id == task.type.id %}
@@ -88,7 +82,7 @@
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <select class="form-control" style="border: none;">
+                            <select class="form-control" name="priority" style="border: none;">
                                 {% for priority in task_priority %}
                                     <option style="color: {{ priority.color }}" value="{{ priority.id }}"
                                             {% if priority.id == task.type.id %}
@@ -113,7 +107,7 @@
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <select class="form-control" style="border: none;">
+                            <select class="form-control" name="status" style="border: none;">
                                 {% for status in task_statuses %}
                                     <option style="color: {{ status.color }}" value="{{ status.id }}"
                                             {% if status.id == task.type.id %}
@@ -139,7 +133,7 @@
                     {% set project = (task.project.parent) ? task.project.parent : task.project %}
                     <div class="col-md-9">
                         <div class="input-group">
-                            <select class="form-control" style="border: none;">
+                            <select class="form-control" name="project" style="border: none;">
                                 <optgroup style="margin: 0; padding: 0;" label="Project">
                                 <option {% if project.id == task.project.id %}selected="selected"{% endif %} value="{{ project.id }}">{{ project.name }}</option>
                                 </optgroup>
@@ -202,7 +196,7 @@
                     <div class="col-md-9">
                         <div class="input-group">
                             {% if task.project.users | length > 0 %}
-                                <select class="form-control" style="border: none;">
+                                <select class="form-control" name="assigned" style="border: none;">
                                     {% for user in task.project.users %}
                                         {% if user.id != task.owner.id %}
                                             <option value="{{ user.id }}" {% if task.assigned == user %}selected="selected"{% endif %}>{{ user.name }}</option>
@@ -237,7 +231,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="input-group">
-                                <select class="form-control" ng-model="selected" style="border: none;">
+                                <select class="form-control" name="progress" ng-model="selected" style="border: none;">
                                     <option value="0">0%</option>
                                     <option value="10">10%</option>
                                     <option value="20">20%</option>
@@ -266,7 +260,7 @@
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <select class="form-control" style="border: none;">
+                            <select class="form-control" name="estimated_hours" style="border: none;">
                                 {% for i in 0..48 %}
                                     <option value="{{ i }}" {% if task.estimatedHours == i %}selected="selected"{% endif %}>{{ i }} h</option>
                                 {% endfor %}
@@ -286,7 +280,7 @@
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <select class="form-control" style="border: none;">
+                            <select class="form-control" name="estimated_minutes" style="border: none;">
                                 <option value="0" {% if task.estimatedMinutes == 0 %}selected="selected"{% endif %}>0 m</option>
                                 <option value="10" {% if task.estimatedMinutes == 10 %}selected="selected"{% endif %}>10 m</option>
                                 <option value="20" {% if task.estimatedMinutes == 20 %}selected="selected"{% endif %}>20 m</option>
@@ -309,7 +303,7 @@
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <input class="form-control" style="border: none;" type="date" value="{{ task.startdate | date('Y-m-d') }}">
+                            <input class="form-control" name="start_date" style="border: none;" type="date" value="{{ task.startdate | date('Y-m-d') }}">
                         </div>
                     </div>
                 </div>
@@ -325,7 +319,7 @@
 
                     <div class="col-md-9">
                         <div class="input-group">
-                            <input class="form-control" style="border: none;" type="date" value="{{ task.enddate | date('Y-m-d') }}">
+                            <input class="form-control" name="end_date" style="border: none;" type="date" value="{{ task.enddate | date('Y-m-d') }}">
                         </div>
                     </div>
                 </div>
@@ -363,7 +357,7 @@
                 <div class="row">
                     <form class="col-md-10" action="{{ path('zectranet_task_edit_descritpion', { 'task_id': task.id }) }}" method="post">
                         <div class="form-group">
-                            <textarea class="form-control" name="description" style="border: none; height: 150px; resize: none;">{{ task.description }}</textarea>
+                            <textarea class="form-control" name="description" style="border: none; height: 85px; resize: none;">{{ task.description }}</textarea>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-default btn-primary">Save</button>
@@ -372,5 +366,46 @@
                 </div>
             </div>
         </div>
+        <!-- End of Desciption Section -->
+
+        <!-- Begin of Task Nav Tabs -->
+        <ul id="myTab" class="nav nav-tabs" role="tablist">
+            <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation" class="active">
+                <a data-toggle="tab" id="task-logs-tab" class="btn" href="#task-logs" aria-controls="task-logs" role="tab" aria-expanded="true">
+                    Logs
+                </a>
+            </li>
+        </ul>
+        <!-- End of Task Nav Tabs -->
+
+        <div id="tasks-tab-content" class="tab-content">
+            <div id="task-logs" class="tab-pane fade in active" style="max-height: 400px; overflow-y: auto;" aria-labelledby="task-logs-tab" role="tabpanel">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="col-md-1">#</th>
+                            <th class="col-md-2">User</th>
+                            <th class="col-md-1">Type</th>
+                            <th class="col-md-3">Value Before</th>
+                            <th class="col-md-3">Value After</th>
+                            <th class="col-md-2">Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for i, log in task.logs %}
+                            <tr>
+                                <td>{{ i }}</td>
+                                <td>{{ log.user.name ~ ' ' ~ log.user.surname ~ ' (' ~ log.user.username ~ ')' }}</td>
+                                <td>{{ log.type }}</td>
+                                <td>{{ log.valueBefore }}</td>
+                                <td>{{ log.valueAfter }}</td>
+                                <td>{{ log.date | date('Y-m-d') }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 {% endblock %}
