--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -216,13 +216,18 @@
 
                     </li>
 
-                    <li class="dropdown">
+                    <li class="dropdown" ng-controller="NavigationController" ng-init="getNotification()">
 
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 							<i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
 						</a>
 
-						<ul class="dropdown-menu dropdown-alerts" style="width: 500px;">
+                        <!-- Sound when new notification -->
+                        <audio id='notif_sound'>
+                            <source src='{{ asset('bundles/zectranet/sound/notify_sound.mp3') }}' type='audio/mpeg'/>
+                        </audio>
+
+						<ul class="notifier dropdown-menu dropdown-alerts">
                             {% if app.user.notifications|length > 0 %}
                                 {% for notification in app.user.notifications %}
                                     {% if notification.type == "message_office" %}
@@ -236,6 +241,7 @@
                                         <li class="divider"></li>
                                     {% endif %}
                                 {% endfor %}
+
                                 <li>
                                     <a class="text-center" href="#">
                                         <strong>See All Alerts</strong>
@@ -400,6 +406,7 @@
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap_ench_dropdowns.js') }}"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/lightbox.min.js') }}"></script>
 
 	{#<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>#}
@@ -410,35 +417,35 @@
 		{
 			asset: "{{ asset('') }}",
 			notificationsGet: "{{ url('zectranet_notifications_get') }}",
-            {#officeShow: "{{ url('zectranet_show_office', {office_id: 0}) }}",
+            officeShow: "{{ url('zectranet_show_office', {office_id: 0}) }}",
 			projectShow: "{{ url('zectranet_show_project', {project_id: 0}) }}",
-			userSettings: "{{ url('intranet_get_user_settings') }}",
-			checkUserByUsername: "{{ url('intranet_user_check_username') }}",
+			taskShow: "{{ url('zectranet_task_show', {task_id: 0}) }}",
+            {#checkUserByUsername: "{{ url('intranet_user_check_username') }}",
             registrationAction : "{{ url('intranet_register_action') }}",
-			checkUsername: "{{ url('intranet_user_check_username') }}",
-			checkEmail: "{{ url('intranet_user_check_email') }}",
+            checkUsername: "{{ url('intranet_user_check_username') }}",
+            checkEmail: "{{ url('intranet_user_check_email') }}",
 
-			// Sprint controll
-			addSprint: "{{ url('intranet_create_sprint') }}",
-			showSprint: "{{ url('intranet_show_sprint', {sprintid: 0}) }}",
-			addTaskToSprint: "{{ url('intranet_add_task_to_sprint', {taskid: 0}) }}",
-			changeStatus: "{{ url('intranet_change_sprint_status', {sprintid: 0}) }}",
+            // Sprint controll
+            addSprint: "{{ url('intranet_create_sprint') }}",
+            showSprint: "{{ url('intranet_show_sprint', {sprintid: 0}) }}",
+            addTaskToSprint: "{{ url('intranet_add_task_to_sprint', {taskid: 0}) }}",
+            changeStatus: "{{ url('intranet_change_sprint_status', {sprintid: 0}) }}",
 
-			// Search and quick search
-			quickSearch: "{{ url('intranet_quick_search') }}",
-			ExtendedSearchUrl: "{{ url('intranet_search') }}",
+            // Search and quick search
+            quickSearch: "{{ url('intranet_quick_search') }}",
+            ExtendedSearchUrl: "{{ url('intranet_search') }}",
 
-			// Upload and document control
-			uploaderUpload: "{{ path('intranet_document_upload') }}",
-			deleteFile: "{{ path('intranet_document_delete', { fileid : 0 }) }}",
-			renameFile: "{{ path('intranet_document_rename', { fileid : 0 }) }}",
-			documentsGet: "{{ path('intranet_document_get') }}",
+            // Upload and document control
+            uploaderUpload: "{{ path('intranet_document_upload') }}",
+            deleteFile: "{{ path('intranet_document_delete', { fileid : 0 }) }}",
+            renameFile: "{{ path('intranet_document_rename', { fileid : 0 }) }}",
+            documentsGet: "{{ path('intranet_document_get') }}",
 
-			delSprint: "{{ url('intranet_del_sprint', {sprintid: 0}) }}",
-			// path to Intranet/web/
-			asset: "{{ asset('') }}",
-			topicsShow: "{{ path('intranet_show_topic', {topic_id: 0}) }}",
-			urlOfficeForTasks: "{{ path('intranet_show_office', {office_id: 0}) }}",#}
+            delSprint: "{{ url('intranet_del_sprint', {sprintid: 0}) }}",
+            // path to Intranet/web/
+            asset: "{{ asset('') }}",
+            topicsShow: "{{ path('intranet_show_topic', {topic_id: 0}) }}",
+            urlOfficeForTasks: "{{ path('intranet_show_office', {office_id: 0}) }}",#}
 		};
 
 		var SearchText = null;
