--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -33,9 +33,9 @@
 				<ul class="nav" id="side-menu">
 
 					<li class="active">
-						<a href="#">
+						<a href="{{ path('zectranet_public_market') }}">
 							<i class='fa fa-credit-card'></i>
-							<span>Public Market</span>
+							Public Market
 						</a>
 					</li>
 
