--- a/src/ZectranetBundle/Resources/views/taskAdd.html.twig
+++ b/src/ZectranetBundle/Resources/views/taskAdd.html.twig
@@ -16,12 +16,12 @@
                             <form class="form-horizontal">
                                 <div class="form-group">
                                     <label for="add_task_name" class="control-label">Task Name:</label>
-                                    <input type="text" id="add_task_name" class="form-control" name="name" ng-model="task.Name" required>
+                                    <input type="text" id="add_task_name" class="form-control" name="name" ng-model="taskModel.Name" required>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="add_task_type" class="control-label">Task Type:</label>
-                                    <select id="add_task_type" class="form-control" name="type" ng-model="task.Type" required>
+                                    <select id="add_task_type" class="form-control" name="type" ng-model="taskModel.Type" required>
                                         {% for type in task_types %}
                                             <option value="{{ type.id }}">
                                                 {{ type.label }}
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="add_task_priority" class="control-label">Task Priority:</label>
-                                    <select id="add_task_priority" class="form-control" name="priority" ng-model="task.Priority" required>
+                                    <select id="add_task_priority" class="form-control" name="priority" ng-model="taskModel.Priority" required>
                                         {% for priority in task_priority %}
                                             <option value="{{ priority.id }}">
                                                 {{ priority.label }}
@@ -42,18 +42,18 @@
 
                                 <div class="form-group">
                                     <label for="add_task_startdate" class="control-label">Task Start Date:</label>
-                                    <input type="date" id="add_task_startdate" class="form-control" name="startdate" ng-model="task.StartDate" required>
+                                    <input type="date" id="add_task_startdate" class="form-control" name="startdate" ng-model="taskModel.StartDate" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="add_task_enddate" class="control-label">Task End Date:</label>
-                                    <input type="date" id="add_task_enddate" class="form-control" name="enddate" ng-model="task.EndDate" required>
+                                    <input type="date" id="add_task_enddate" class="form-control" name="enddate" ng-model="taskModel.EndDate" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="add_task_description" class="control-label">Task Description:</label>
-                                    <textarea id="add_task_description" class="form-control" name="description" ng-model="task.Description" required style="height: 100px;"></textarea>
+                                    <textarea id="add_task_description" class="form-control" name="description" ng-model="taskModel.Description" required style="height: 100px;"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <button type="button" class="btn btn-primary" ng-click="addTask(task)">Add</button>
+                                    <button type="button" class="btn btn-primary" ng-click="addTask(taskModel)">Add</button>
                                     <a class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</a>
                                 </div>
                             </form>
