--- a/src/ZectranetBundle/Resources/views/taskDelete.html.twig
+++ b/src/ZectranetBundle/Resources/views/taskDelete.html.twig
@@ -17,7 +17,7 @@
                                     <h4>Do you really want to delete this task?</h4>
                                 </div>
                                 <div class="form-group">
-                                    <a ng-click="deleteTask(task.id)" class="btn btn-danger">Delete</a>
+                                    <a ng-click="deleteTask(taskModel.id)" class="btn btn-danger">Delete</a>
                                     <a class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</a>
                                 </div>
                             </form>
